--- a/Pagar3.html
+++ b/Pagar3.html
@@ -33,7 +33,7 @@
 
         <!-- Botão Confirmar  -->
 
-        <a href='Pagar4.html'><button>Confirmar</button></a>
+        <a href='Pagar4.html'>Confirmar</a>
 
 
     </main>
