--- a/Pagar4.html
+++ b/Pagar4.html
@@ -25,7 +25,7 @@
 
         <p>
 
-            <button type="button">Gerar Comprovante</button>
+            <a href='Pagar5.html'>Comprovante</a>
 
         </p>
 
@@ -33,7 +33,7 @@
 
         <p>
 
-            <button type="button">Finalizar</button>
+            <a href='index.html'>Finalizar</a>
 
         </p>
 
