--- a/Receber1.html
+++ b/Receber1.html
@@ -28,7 +28,7 @@
 
         <!-- Botão Confirmar -->
 
-        <button type="button"> Confirmar </button>
+        <a href='Receber2.html'>Confirmar</a>
 
     </p>
 
