--- a/Receber2.html
+++ b/Receber2.html
@@ -21,11 +21,15 @@
 
     <!-- QR Code -->
 
-    <img src="QRCode.png" alt="QRCode">
+    <img src="IMG/QRCode.png" alt="QRCode">
 
     <h2> Conta a receber </h2>
 
     <h3> 598.***.***-47</h3>
+
+    <!-- Este botão não existirá em nosso aplicativo, apenas foi incrementado para permitir o fluxo de telas no momento -->
+
+    <a href='Receber3.html'>Tela Seguinte</a>
 
 </body>
 </html>
