--- a/Receber3.html
+++ b/Receber3.html
@@ -29,7 +29,7 @@
 
     <!-- Botão Confirmar  -->
     
-    <button type="button">Confirmar</button> 
+    <a href='Receber4.html'>Confirmar</a>
 
 </body>
 </html>
