--- a/Receber4.html
+++ b/Receber4.html
@@ -23,7 +23,7 @@
 
     <!-- Botão Início  -->
     
-    <button type="button">Voltar ao Início -></button> 
+    <a href='index.html'>Voltar ao início -></a>
 
 </body>
 </html>
