--- a/Pagar1.html
+++ b/Pagar1.html
@@ -23,7 +23,11 @@
 
         <!-- Camera -->
 
-        <img src="Camera.jpg" alt="Camera">
+        <img src="IMG/Camera.jpg" alt="Camera">
+
+        <!-- Este botão não existirá em nosso aplicativo, apenas foi incrementado para permitir o fluxo de telas no momento -->
+
+        <a href='Pagar2.html'>Tela Seguinte</a>
 
     </main>
 
