--- a/Histórico2.html
+++ b/Histórico2.html
@@ -21,7 +21,7 @@
 
         <!-- Informação Sobre Saldo Disponível-->
 
-        <h2> + Total Disponível: R$ 26,75</h2>
+        <h2> Total Disponível: R$ 26,75</h2>
 
         <!-- Informação Sobre Vendas (Mês) -->
 
@@ -73,6 +73,10 @@
             <!-- Neste caso apenas foram colocadas algumas datas de exemplo, mas o usuário poderia ver maior número de datas passadas -->
 
         </section>
+
+        <!-- Gráfico de Análise Lucro por Dia-->
+
+        <img src="IMG/Gráfico - VendasDia.JPG" alt="Evolução das Vendas em Função dos Dias">
 
     </main>
 </body>
