--- a/Receber1.html
+++ b/Receber1.html
@@ -22,7 +22,7 @@
     <h2> Insira o Valor: </h2>
 
 
-    <input type="text" id="txtBusca" placeholder="Em R$..." />
+    <input type="text" id="txtBusca" placeholder="Em R$..." >
 
     <p>
 
