Atualizações - Botão e Formatação Receber

--- a/Histórico1.html
+++ b/Histórico1.html
@@ -9,7 +9,7 @@
 
     <header>
 
-        <button type="button">☰</button>
+        <a href='Menu.html'>☰</a>
 
         <h1> AllPay </h1>
 
@@ -17,7 +17,7 @@
 
     <main> 
 
-        <h2> Histórico</h2>
+        <h2> Histórico </h2>
     
         <!-- Gráfico -->
     
