--- a/Receber1.html
+++ b/Receber1.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
-
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
-    <title> AllPay </title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
 </head>
 
 <body>
 
-    <p>
-        <!-- Botão Menu  -->
+    <header>
 
-        <button type="button">☰</button>
-    </p>
+        <a href='Menu.html'>☰</a>
 
-    <h1> All Pay </h1>
+        <h1> AllPay </h1>
 
-    <h3> Receber </h3>
+    </header>
 
-    <h2> Insira o Valor: </h2>
+    <main>
+
+        <h2> Receber </h2>
+
+        <h3> Insira o Valor: </h3>
 
 
-    <input type="text" id="txtBusca" placeholder="Em R$..." >
-
-    <p>
+        <input type="text" id="txtBusca" placeholder="Em R$...">
 
         <!-- Botão Confirmar -->
 
         <a href='Receber2.html'>Confirmar</a>
 
-    </p>
-
+    </main>
 </body>
 
 </html>
