--- a/Receber2.html
+++ b/Receber2.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
-
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
-    <title> AllPay </title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
 </head>
 
 <body>
-    
-    <p> 
-        <!-- Botão Menu  -->
-    
-        <button type="button">☰</button>  
-    </p>
 
-    <h1> All Pay </h1>
-   
-    <h3> Receber </h3>
+    <header>
 
-    <!-- QR Code -->
+        <a href='Menu.html'>☰</a>
 
-    <img src="IMG/QRCode.png" alt="QRCode">
+        <h1> AllPay </h1>
 
-    <h2> Conta a receber </h2>
+    </header>
 
-    <h3> 598.***.***-47</h3>
+    <main>
 
-    <!-- Este botão não existirá em nosso aplicativo, apenas foi incrementado para permitir o fluxo de telas no momento -->
+        <h2> Receber </h2>
 
-    <a href='Receber3.html'>Tela Seguinte</a>
+        <!-- QR Code -->
 
+        <img src="IMG/QRCode.png" alt="QRCode">
+
+        <h3> Conta a receber </h3>
+
+        <p> 598.***.***-47</p>
+
+        <!-- Este botão não existirá em nosso aplicativo, apenas foi incrementado para permitir o fluxo de telas no momento -->
+
+        <a href='Receber3.html'>Tela Seguinte</a>
+
+
+    </main>
 </body>
+
 </html>
