--- a/Histórico2.html
+++ b/Histórico2.html
@@ -11,7 +11,7 @@
 
     <header>
 
-        <button type="button">☰</button>
+        <a href='Menu.html'>☰</a>
 
         <h1> AllPay </h1>
 
@@ -21,7 +21,7 @@
 
         <!-- Informação Sobre Saldo Disponível-->
 
-        <h2> Total Disponível: R$ 26,75</h2>
+        <h2> Total Disponível: R$ 26,75 </h2>
 
         <!-- Informação Sobre Vendas (Mês) -->
 
