--- a/Pagar1.html
+++ b/Pagar1.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scan do QR Code</title>
+    <title>Pagar - QR Code</title>
 </head>
 
 <body>
