--- a/Pagar5.html
+++ b/Pagar5.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comprovante</title>
 </head>
 <body>
@@ -46,6 +45,10 @@
             <p> 509.***.***-43 </p>
 
         </section>
+
+        <!-- Botão adicionado posteriormente pelo grupo, dada a necessidade do usuário voltar para a página inicial -->
+
+        <a href='index.html'>Voltar ao Início</a>
         
 
     </main>
