--- a/Menu(TelaExtra).html
+++ b/Menu(TelaExtra).html
@@ -24,7 +24,7 @@
 
             <img src="IMG/user.jpg" alt="Foto do Usuário">
 
-            <p> Marcelo Carvalho </p>
+            <h2> Marcelo Carvalho </h2>
 
             <!-- Este link, em tese, encaminharia para o trocar de conta, no entanto, como essa tela não faz parte das telas produzidas pelo grupo, o link encaminhará para o index -->
 
