--- a/Receber2.html
+++ b/Receber2.html
@@ -32,6 +32,10 @@
 
         <a href='Receber3.html'>Tela Seguinte</a>
 
+        <!-- Botão indicado pelo usuário para editar valor, caso insira errado -->
+
+        <a href='Receber1.html'>Editar Valor</a>
+
 
     </main>
 </body>
