--- a/Histórico2.html
+++ b/Histórico2.html
@@ -83,7 +83,17 @@
 
         <!-- Gráfico de Análise Lucro por Dia-->
 
-        <img src="IMG/Gráfico-VendasDia.JPG" alt="Evolução das Vendas em Função dos Dias">
+        <section>
+
+            <h4> Gráfico de Evolução das Vendas por Dia </h4>
+
+            <img src="IMG/Gráfico-VendasDia.JPG" alt="Evolução das Vendas em Função dos Dias">
+
+        </section>
+
+        <!-- Botão adicionado posteriormente pelo grupo, dada a necessidade do usuário voltar para a página inicial -->
+
+        <a href='index.html'>Voltar ao Início</a>
 
     </main>
 </body>
