--- a/Receber1.html
+++ b/Receber1.html
@@ -23,6 +23,7 @@
 
         <h3> Insira o Valor: </h3>
 
+        <!-- Espaço para inserir texto de modo a simular a experiência do usuário -->
 
         <input type="text" id="txtBusca" placeholder="Em R$...">
 
