--- a/Menu.html
+++ b/Menu.html
@@ -22,7 +22,7 @@
 
         <section>
 
-            <img src="IMG/user.jpg" alt="Foto do Usuário">
+            <img src="IMG/user.png" alt="Foto do Usuário">
 
             <h2> Marcelo Carvalho </h2>
 
