--- a/Pagar1.html
+++ b/Pagar1.html
@@ -3,26 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Pagar - QR Code</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pagar 1</title>
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/pagar1.css">
 </head>
 
 <body>
 
     <header>
 
-        <a href='Menu.html'>☰</a>
+        <a href="Menu"><img src="http://via.placeholder.com/44x44" alt=""></a>
 
-        <h1> AllPay</h1>
+        <h1 class = "logo"> AllPay</h1>
 
     </header>
 
     <main>
 
-        <h2> Pagando... </h2>
+        <h2 class = "pagando"> Pagando... </h2>
 
         <!-- Camera -->
 
-        <img src="IMG/Camera.jpg" alt="Camera">
+        <img class = "imagem-camera" src="IMG/Camera.jpg" alt="Camera">
 
         <!-- Este botão não existirá em nosso aplicativo, apenas foi incrementado para permitir o fluxo de telas no momento -->
 
