--- a/Pagar3.html
+++ b/Pagar3.html
@@ -3,36 +3,47 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagar - Confirmar Transação</title>
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/pagar3.css">
 </head>
 
 <body>
 
     <header>
 
-        <a href='Menu.html'>☰</a>
+        <a href="Menu"><img src="http://via.placeholder.com/44x44" alt=""></a>
 
-        <h1> AllPay</h1>
+        <h1 class = "logo"> AllPay</h1>
 
     </header>
 
     <main>
 
-        <section>
+        <section class = "dados">
 
-            <h2> Transferência de </h2>
+            <ul>
 
-            <p> R$20.00 </p>
+                <li>  <h2 class = "destaque"> Transferência de </h2> </li>
 
-            <h3> Para José Carlos </h3>
+                <li> <p class = "subtexto"> R$20.00 </p> </li>
 
-            <p> 509.***.***-43 </p>
+            </ul>
+
+            <ul class = "para">
+
+                <li> <h3 class = "destaque"> Para José Carlos </h3> </li>
+
+                <li> <p class = "subtexto"> 509.***.***-43 </p> </li>
+
+            </ul>
 
         </section>
 
         <!-- Botão Confirmar  -->
 
-        <a href='Pagar4.html'>Confirmar</a>
+        <a class = "botao fonte" href='Pagar4.html'>Confirmar</a>
 
 
     </main>
