--- a/Pagar4.html
+++ b/Pagar4.html
@@ -3,30 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagar - Finalizar Pagamento</title>
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/pagar4.css">
 </head>
 
 <body>
 
     <header>
 
-        <a href='Menu.html'>☰</a>
+        <a href="Menu"><img src="http://via.placeholder.com/44x44" alt=""></a>
 
-        <h1> AllPay</h1>
+        <h1 class = "logo"> AllPay</h1>
 
     </header>
 
     <main>
 
-        <h2> Pagamento Finalizado! </h2>
+        <h2 class = "destaque"> Pagamento Finalizado! </h2>
 
         <!-- Botão Comprovante  -->
 
-        <a href='Pagar5.html'>Comprovante</a>
+        <a class = "botao fonte" href='Pagar5.html'>Comprovante</a>
 
         <!-- Botão Finalizar  -->
 
-        <a href='index.html'>Finalizar</a>
+        <a class = "botao fonte" href='index.html'>Finalizar</a>
 
     </main>
 
