--- a/Receber1.html
+++ b/Receber1.html
@@ -5,31 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receber - Inserir Valor</title>
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/receber1.css">
 </head>
 
 <body>
 
     <header>
 
-        <a href='Menu.html'>☰</a>
+        <a href="Menu"><img src="http://via.placeholder.com/44x44" alt=""></a>
 
-        <h1> AllPay </h1>
+        <h1 class = "logo"> AllPay</h1>
 
     </header>
 
     <main>
 
-        <h2> Receber </h2>
+        <h2 class = "destaque"> Receber </h2>
 
-        <h3> Insira o Valor: </h3>
+        <section>
 
-        <!-- Espaço para inserir texto de modo a simular a experiência do usuário -->
+            <h3 class = "subtexto"> Insira o Valor: </h3>
 
-        <input type="text" id="txtBusca" placeholder="Em R$...">
+            <!-- Espaço para inserir texto de modo a simular a experiência do usuário -->
+
+            <input class="input" type="text" id="txtBusca" placeholder="Em R$...">
+
+        </section>
 
         <!-- Botão Confirmar -->
 
-        <a href='Receber2.html'>Confirmar</a>
+        <a class = "botao fonte" href='Receber2.html'>Confirmar</a>
 
     </main>
 </body>
