--- a/Receber3.html
+++ b/Receber3.html
@@ -3,34 +3,41 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receber - Confirmação</title>
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/receber3.css">
 </head>
 
 <body>
 
     <header>
 
-        <a href='Menu.html'>☰</a>
+        <a href="Menu"><img src="http://via.placeholder.com/44x44" alt=""></a>
 
-        <h1> AllPay </h1>
+        <h1 class = "logo"> AllPay</h1>
 
     </header>
 
     <main>
 
-        <!-- Valor da Transferência-->
+        <section class = "dados">
+        
+            <!-- Valor da Transferência-->
 
-        <h2> Transferência de: RS20.00 </h2>
+            <h2 class = "destaque"> Transferência de: RS20.00 </h2>
 
-        <!-- Informações do Cliente -->
+            <!-- Informações do Cliente -->
 
-        <h3> De José Carlos </h3>
+            <h3 class = "destaque"> De José Carlos </h3>
 
-        <p> 607.***.***-88 </p>
+            <p class = "subtexto"> 607.***.***-88 </p>
+
+        </section>
 
         <!-- Botão Confirmar  -->
 
-        <a href='Receber4.html'>Confirmar</a>
+        <a class = "botao fonte" href='Receber4.html'>Confirmar</a>
 
     </main>
 </body>
