--- a/Receber4.html
+++ b/Receber4.html
@@ -3,30 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receber - Finalizado</title>
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/receber4.css">
 </head>
 
 <body>
 
     <header>
 
-        <a href='Menu.html'>☰</a>
+        <a href="Menu"><img src="http://via.placeholder.com/44x44" alt=""></a>
 
-        <h1> AllPay </h1>
+        <h1 class = "logo"> AllPay</h1>
 
     </header>
 
     <main>
 
-        <h1> Pagamento Recebido! </h1>
+        <h1 class = "destaque"> Pagamento Recebido! </h1>
 
         <!-- Mensagem Saldo -->
 
-        <h2> O valor de R$20.00 foi adicionado ao seu saldo!</h2>
+        <h2 class = "subtexto"> O valor de R$20.00 foi adicionado ao seu saldo!</h2>
 
         <!-- Botão Início  -->
 
-        <a href='index.html'>Voltar ao início -></a>
+        <a class = "botao fonte" href='index.html'>Voltar ao início -></a>
 
     </main>
 </body>
