--- a/PagamentoRejeitado(TelaExtra).html
+++ b/PagamentoRejeitado(TelaExtra).html
@@ -3,30 +3,33 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Menu de Opções</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pagamento Reiejtiado</title>
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/pag-rej.css">
 </head>
 
 <body>
 
     <header>
 
-        <a href='Menu.html'>☰</a>
+        <a href="Menu.html"><img src="IMG/Menu.png" alt=""></a>
 
-        <h1> AllPay</h1>
+        <h1 class = "logo"> AllPay</h1>
 
     </header>
 
     <main>
 
-        <h2> Pagamento não aprovado! </h2>
+        <h2 class = "destaque"> Pagamento não aprovado! </h2>
 
-        <p> Caso queira tentar novamente, clique em retornar para escolher uma nova forma de pagamento: </p>
+        <p class = "subtexto"> Caso queira tentar novamente, clique em retornar para escolher uma nova forma de pagamento: </p>
 
-        <a href='Pagar2.html'>Retornar</a>
+        <a class = "botao fonte" href='Pagar2.html'>Retornar</a>
 
         <!-- Botão adicionado posteriormente pelo grupo, pensando naqueles usuários que não desejam mais realizar o pagamento -->
 
-        <a href='index.html'>Tela Inicial</a>
+        <a class = "botao fonte" href='index.html'>Tela Inicial</a>
 
     </main>
 
