--- a/Receber1.html
+++ b/Receber1.html
@@ -13,7 +13,7 @@
 
     <header>
 
-        <a href="Menu"><img src="http://via.placeholder.com/44x44" alt=""></a>
+        <a href="Menu.html"><img src="IMG/Menu.png" alt=""></a>
 
         <h1 class = "logo"> AllPay</h1>
 
@@ -29,7 +29,7 @@
 
             <!-- Espaço para inserir texto de modo a simular a experiência do usuário -->
 
-            <input class="input" type="text" id="txtBusca" placeholder="Em R$...">
+            <input class="input" type="number" id="txtBusca" placeholder="Em R$...">
 
         </section>
 
