--- a/Receber3.html
+++ b/Receber3.html
@@ -13,25 +13,32 @@
 
     <header>
 
-        <a href="Menu"><img src="http://via.placeholder.com/44x44" alt=""></a>
-
+        <a href="Menu.html"><img src="IMG/Menu.png" alt=""></a>
+        
         <h1 class = "logo"> AllPay</h1>
 
     </header>
 
     <main>
 
+
         <section class = "dados">
-        
-            <!-- Valor da Transferência-->
 
-            <h2 class = "destaque"> Transferência de: RS20.00 </h2>
+            <ul>
 
-            <!-- Informações do Cliente -->
+                <li>  <h2 class = "destaque"> Transferência de </h2> </li>
 
-            <h3 class = "destaque"> De José Carlos </h3>
+                <li> <p class = "subtexto"> R$20.00 </p> </li>
 
-            <p class = "subtexto"> 607.***.***-88 </p>
+            </ul>
+
+            <ul class = "para">
+
+                <li> <h3 class = "destaque"> De José Carlos </h3> </li>
+
+                <li> <p class = "subtexto"> 607.***.***-88 </p> </li>
+
+            </ul>
 
         </section>
 
