--- a/Menu.html
+++ b/Menu.html
@@ -3,16 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Menu de Opções</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/menu.css">
 </head>
-
 <body>
 
     <header>
+        
+        <a href="index.html"><img src="IMG/Menu.png" alt=""></a>
 
-        <a href='Menu.html'>☰</a>
-
-        <h1> AllPay</h1>
+        <h1 class = "logo"> AllPay </h1>
 
     </header>
 
@@ -20,25 +22,25 @@
 
         <!-- Section Referente à Conta do Usuário -->
 
-        <section>
+        <section class = "infos-user">
 
-            <img src="IMG/user.png" alt="Foto do Usuário">
+            <img class = "img-user" src="IMG/user.png" alt="Foto do Usuário">
 
             <h2> Marcelo Carvalho </h2>
 
-            <!-- Este link, em tese, encaminharia para o trocar de conta, no entanto, como essa tela não faz parte das telas produzidas pelo grupo, o link encaminhará para o index -->
-
-            <a href='index.html'>Trocar de Conta</a>
-
         </section>
+        
+        <!-- Este link, em tese, encaminharia para o trocar de conta, no entanto, como essa tela não faz parte das telas produzidas pelo grupo, o link encaminhará para o index -->
+
+        <a class = "troca-conta" href='index.html'>Trocar de Conta</a>
 
         <!-- Pelo mesmo motivo do anterior, estes links encaminham para a página inicial-->
 
-        <a href='index.html'>Editar Perfil</a>
+        <a class = "botao fonte" href='index.html'>Editar Perfil</a>
 
-        <a href='index.html'>Sobre</a>
+        <a class = "botao fonte" href='index.html'>Sobre</a>
 
-        <a href='index.html'>Apoio</a>
+        <a class = "botao fonte" href='index.html'>Apoio</a>
 
     </main>
 
