--- a/Receber2.html
+++ b/Receber2.html
@@ -13,7 +13,7 @@
 
     <header>
 
-        <a href="Menu"><img src="http://via.placeholder.com/44x44" alt=""></a>
+        <a href="Menu.html"><img src="IMG/Menu.png" alt=""></a>
 
         <h1 class = "logo"> AllPay</h1>
 
