--- a/Histórico2.html
+++ b/Histórico2.html
@@ -7,6 +7,9 @@
     <title>Histórico</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/historico2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -24,15 +27,15 @@
 
         <!-- Informação Sobre Saldo Disponível-->
 
-        <h2> Total Disponível: R$ 26,75 </h2>
+        <h2 class = "open-sans"> Total Disponível: R$ 26,75 </h2>
 
         <!-- Informação Sobre Vendas (Mês) -->
         
         <section class = "section-vendas">
 
-            <h3 class = "destaque"> Vendas (Mês): </h3>
+            <h3 class = "destaque open-sans"> Vendas (Mês): </h3>
 
-            <p class = "valor"> + R$ 2784,22 </p>
+            <p class = "valor open-sans"> + R$ 2784,22 </p>
 
         </section>
 
@@ -40,10 +43,10 @@
 
         <section class = "section-gastos">
 
-            <h3 class = "destaque"> Gastos (Mês): </h3>
+            <h3 class = "destaque open-sans"> Gastos (Mês): </h3>
 
 
-            <p class = "valor"> - R$ 498,00 </p>
+            <p class = "valor open-sans"> - R$ 498,00 </p>
 
         </section>
 
@@ -51,21 +54,21 @@
 
         <section class = "section-transacoes">
 
-            <h3 class = "subtexto"> Extrato: </h3>
+            <h3 class = "subtexto open-sans"> Extrato: </h3>
 
             <!-- Simulação de Transações Referentes ao Dia 31/08 -->
 
             <section class = "section-extrato">
 
-                <h4 class = "data"> 31/08 </h4>
+                <h4 class = "data open-sans"> 31/08 </h4>
 
                 <ul>
 
-                    <li> + R$ 2,90 </li>
+                    <li class = "open-sans"> + R$ 2,90 </li>
 
-                    <li> - R$ 1,20 </li>
+                    <li class = "open-sans"> - R$ 1,20 </li>
 
-                    <li> + R$ 10,20</li>
+                    <li class = "open-sans"> + R$ 10,20</li>
 
             </ul>
 
@@ -75,15 +78,15 @@
 
             <section class = "section-extrato">
 
-                <h4 class = "data"> 30/08 </h4>
+                <h4 class = "data open-sans"> 30/08 </h4>
 
                 <ul>
 
-                    <li> + R$ 2,90 </li>
+                    <li class = "open-sans"> + R$ 2,90 </li>
 
-                    <li> - R$ 1,20 </li>
+                    <li class = "open-sans"> - R$ 1,20 </li>
 
-                    <li> + R$ 10,20</li>
+                    <li class = "open-sans"> + R$ 10,20</li>
 
                 </ul>
 
@@ -105,7 +108,7 @@
 
         <!-- Botão adicionado posteriormente pelo grupo, dada a necessidade do usuário voltar para a página inicial -->
 
-        <a class = "botao fonte" href='index.html'>Voltar ao Início</a>
+        <a class = "botao fonte open-sans" href='index.html'>Voltar ao Início</a>
 
     </main>
 </body>
