--- a/Menu.html
+++ b/Menu.html
@@ -7,6 +7,9 @@
     <title>Home</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/menu.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -26,21 +29,25 @@
 
             <img class = "img-user" src="IMG/user.png" alt="Foto do Usuário">
 
-            <h2> Marcelo Carvalho </h2>
+            <h2 class =  "open-sans"> Marcelo Carvalho </h2>
 
         </section>
         
         <!-- Este link, em tese, encaminharia para o trocar de conta, no entanto, como essa tela não faz parte das telas produzidas pelo grupo, o link encaminhará para o index -->
 
-        <a class = "troca-conta" href='index.html'>Trocar de Conta</a>
+        <a class = "troca-conta open-sans" href='index.html'>Trocar de Conta</a>
 
         <!-- Pelo mesmo motivo do anterior, estes links encaminham para a página inicial-->
 
-        <a class = "botao fonte" href='index.html'>Editar Perfil</a>
+        <section class = "section-botoes">
 
-        <a class = "botao fonte" href='index.html'>Sobre</a>
+            <a class = "botao fonte open-sans" href='index.html'>Editar Perfil</a>
 
-        <a class = "botao fonte" href='index.html'>Apoio</a>
+            <a class = "botao fonte open-sans" href='index.html'>Sobre</a>
+
+            <a class = "botao fonte open-sans" href='index.html'>Apoio</a>
+
+        </section>
 
     </main>
 
