--- a/PagamentoRejeitado(TelaExtra).html
+++ b/PagamentoRejeitado(TelaExtra).html
@@ -7,6 +7,9 @@
     <title>Pagamento Reiejtiado</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/pag-rej.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,15 +24,15 @@
 
     <main>
 
-        <h2 class = "destaque"> Pagamento não aprovado! </h2>
+        <h2 class = "destaque open-sans"> Pagamento não aprovado! </h2>
 
-        <p class = "subtexto"> Caso queira tentar novamente, clique em retornar para escolher uma nova forma de pagamento: </p>
+        <p class = "subtexto open-sans"> Caso queira tentar novamente, clique em retornar para escolher uma nova forma de pagamento: </p>
 
-        <a class = "botao fonte" href='Pagar2.html'>Retornar</a>
+        <a class = "botao fonte open-sans" href='Pagar2.html'>Retornar</a>
 
         <!-- Botão adicionado posteriormente pelo grupo, pensando naqueles usuários que não desejam mais realizar o pagamento -->
 
-        <a class = "botao fonte" href='index.html'>Tela Inicial</a>
+        <a class = "botao fonte open-sans" href='index.html'>Tela Inicial</a>
 
     </main>
 
