--- a/Pagar1.html
+++ b/Pagar1.html
@@ -7,6 +7,9 @@
     <title>Pagar 1</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/pagar1.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +24,7 @@
 
     <main>
 
-        <h2 class = "pagando"> Pagando... </h2>
+        <h2 class = "pagando open-sans"> Pagando... </h2>
 
         <!-- Camera -->
 
