--- a/Pagar3.html
+++ b/Pagar3.html
@@ -7,6 +7,9 @@
     <title>Pagar - Confirmar Transação</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/pagar3.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,17 +28,17 @@
 
             <ul>
 
-                <li>  <h2 class = "destaque"> Transferência de </h2> </li>
+                <li>  <h2 class = "destaque open-sans"> Transferência de </h2> </li>
 
-                <li> <p class = "subtexto"> R$20.00 </p> </li>
+                <li> <p class = "subtexto open-sans"> R$20.00 </p> </li>
 
             </ul>
 
             <ul class = "para">
 
-                <li> <h3 class = "destaque"> Para José Carlos </h3> </li>
+                <li> <h3 class = "destaque open-sans"> Para José Carlos </h3> </li>
 
-                <li> <p class = "subtexto"> 509.***.***-43 </p> </li>
+                <li> <p class = "subtexto open-sans"> 509.***.***-43 </p> </li>
 
             </ul>
 
@@ -43,7 +46,7 @@
 
         <!-- Botão Confirmar  -->
 
-        <a class = "botao fonte" href='Pagar4.html'>Confirmar</a>
+        <a class = "botao fonte open-sans" href='Pagar4.html'>Confirmar</a>
 
 
     </main>
