--- a/Pagar4.html
+++ b/Pagar4.html
@@ -7,6 +7,9 @@
     <title>Pagar - Finalizar Pagamento</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/pagar4.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,15 +24,15 @@
 
     <main>
 
-        <h2 class = "destaque"> Pagamento Finalizado! </h2>
+        <h2 class = "destaque open-sans"> Pagamento Finalizado! </h2>
 
         <!-- Botão Comprovante  -->
 
-        <a class = "botao fonte" href='Pagar5.html'>Comprovante</a>
+        <a class = "botao fonte open-sans" href='Pagar5.html'>Comprovante</a>
 
         <!-- Botão Finalizar  -->
 
-        <a class = "botao fonte" href='index.html'>Finalizar</a>
+        <a class = "botao fonte open-sans" href='index.html'>Finalizar</a>
 
     </main>
 
