--- a/Receber1.html
+++ b/Receber1.html
@@ -7,6 +7,9 @@
     <title>Receber - Inserir Valor</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/receber1.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,21 +24,21 @@
 
     <main>
 
-        <h2 class = "destaque"> Receber </h2>
+        <h2 class = "destaque open-sans"> Receber </h2>
 
         <section>
 
-            <h3 class = "subtexto"> Insira o Valor: </h3>
+            <h3 class = "subtexto open-sans"> Insira o Valor: </h3>
 
             <!-- Espaço para inserir texto de modo a simular a experiência do usuário -->
 
-            <input class="input" type="number" id="txtBusca" placeholder="Em R$...">
+            <input class="input open-sans" type="number" id="txtBusca" placeholder="Em R$...">
 
         </section>
 
         <!-- Botão Confirmar -->
 
-        <a class = "botao fonte" href='Receber2.html'>Confirmar</a>
+        <a class = "botao fonte open-sans" href='Receber2.html'>Confirmar</a>
 
     </main>
 </body>
