--- a/Receber3.html
+++ b/Receber3.html
@@ -7,6 +7,9 @@
     <title>Receber - Confirmação</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/receber3.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -26,17 +29,17 @@
 
             <ul>
 
-                <li>  <h2 class = "destaque"> Transferência de </h2> </li>
+                <li>  <h2 class = "destaque open-sans"> Transferência de </h2> </li>
 
-                <li> <p class = "subtexto"> R$20.00 </p> </li>
+                <li> <p class = "subtexto open-sans"> R$20.00 </p> </li>
 
             </ul>
 
             <ul class = "para">
 
-                <li> <h3 class = "destaque"> De José Carlos </h3> </li>
+                <li> <h3 class = "destaque open-sans"> De José Carlos </h3> </li>
 
-                <li> <p class = "subtexto"> 607.***.***-88 </p> </li>
+                <li> <p class = "subtexto open-sans"> 607.***.***-88 </p> </li>
 
             </ul>
 
@@ -44,7 +47,7 @@
 
         <!-- Botão Confirmar  -->
 
-        <a class = "botao fonte" href='Receber4.html'>Confirmar</a>
+        <a class = "botao fonte open-sans" href='Receber4.html'>Confirmar</a>
 
     </main>
 </body>
