--- a/Receber4.html
+++ b/Receber4.html
@@ -7,6 +7,9 @@
     <title>Receber - Finalizado</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/receber4.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,15 +24,15 @@
 
     <main>
 
-        <h1 class = "destaque"> Pagamento Recebido! </h1>
+        <h1 class = "destaque open-sans"> Pagamento Recebido! </h1>
 
         <!-- Mensagem Saldo -->
 
-        <h2 class = "subtexto"> O valor de R$20.00 foi adicionado ao seu saldo!</h2>
+        <h2 class = "subtexto open-sans"> O valor de R$20.00 foi adicionado ao seu saldo!</h2>
 
         <!-- Botão Início  -->
 
-        <a class = "botao fonte" href='index.html'>Voltar ao início -></a>
+        <a class = "botao fonte open-sans" href='index.html'>Voltar ao início -></a>
 
     </main>
 </body>
