--- a/Histórico1.html
+++ b/Histórico1.html
@@ -7,6 +7,9 @@
     <title>Histórico</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/historico1.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,13 +24,13 @@
 
     <main>
 
-        <h2 class = "historico"> Histórico </h2>
+        <h2 class = "historico open-sans"> Histórico </h2>
 
         <section class = "section-grafico">
         
             <!-- Gráfico -->
 
-            <h3 class = "negrito"> Evolução Diária do Lucro </h3>
+            <h3 class = "negrito open-sans"> Evolução Diária do Lucro </h3>
 
             <img class = "grafico-img" src="IMG/Gráfico-Histórico.png" alt="Evolução dos Lucros em Função do Tempo">
 
@@ -35,9 +38,9 @@
 
                 <!-- Informação Sobre Lucro Diário  -->
 
-                <h3> Lucro Diário: </h3>
+                <h3 class = "open-sans"> Lucro Diário: </h3>
 
-                <p> + R$20,90 </p>
+                <p class = "open-sans"> + R$20,90 </p>
 
             </section>
 
@@ -47,17 +50,17 @@
         
             <!-- Informação Sobre Transações Recentes -->
 
-            <h3 class = "titulo-ultimas-transacoes"> Últimas Transações </h3>
+            <h3 class = "titulo-ultimas-transacoes open-sans"> Últimas Transações </h3>
 
             <!-- Neste caso, demos exemplo de duas das últimas transações do possível usuário -->
 
             <ul>
 
-                <li> + R$3,90 - 15:30 </li>
+                <li class = "open-sans"> + R$3,90 - 15:30 </li>
 
-                <li> - R$1,20 - 14:10 </li>
+                <li class = "open-sans"> - R$1,20 - 14:10 </li>
 
-                <li> - R$20,00 - 12:55</li>
+                <li class = "open-sans"> - R$20,00 - 12:55</li>
 
             </ul>
 
@@ -65,7 +68,7 @@
 
         <!-- Botão Ver Mais Informações -->
 
-        <a class = "obter-infos font" href='Histórico2.html'>Obter mais detalhes</a>
+        <a class = "obter-infos font open-sans" href='Histórico2.html'>Obter mais detalhes</a>
 
     </main>
 </body>
