--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
             <!-- Botão Ver Hisórico  -->
     
-            <a href='Histórico1.html' class = "historico open-sans">Ver Histórico -></a>
+            <a href='Histórico1.html' class = "historico open-sans">Ver Histórico ➔</a>
 
         </section>
 
