--- a/Receber4.html
+++ b/Receber4.html
@@ -32,7 +32,7 @@
 
         <!-- Botão Início  -->
 
-        <a class = "botao fonte open-sans" href='index.html'>Voltar ao início -></a>
+        <a class = "botao fonte open-sans" href='index.html'>Voltar ao início</a>
 
     </main>
 </body>
