--- a/Historico1.html
+++ b/Historico1.html
@@ -68,7 +68,7 @@
 
         <!-- Botão Ver Mais Informações -->
 
-        <a class = "obter-infos font open-sans" href='Histórico2.html'>Obter mais detalhes</a>
+        <a class = "obter-infos font open-sans" href='Historico2.html'>Obter mais detalhes</a>
 
     </main>
 </body>
