--- a/PagamentoRejeitado(TelaExtra).html
+++ b/PagamentoRejeitado(TelaExtra).html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -26,7 +29,7 @@
 
         <h2 class = "destaque open-sans"> Pagamento não aprovado! </h2>
 
-        <p class = "subtexto open-sans"> Caso queira tentar novamente, clique em retornar para escolher uma nova forma de pagamento: </p>
+        <p class = "subtexto eb-garamond"> Caso queira tentar novamente, clique em retornar para escolher uma nova forma de pagamento: </p>
 
         <a class = "botao fonte open-sans" href='Pagar2.html'>Retornar</a>
 
