--- a/Pagar1.html
+++ b/Pagar1.html
@@ -32,7 +32,7 @@
 
         <!-- Este botão não existirá em nosso aplicativo, apenas foi incrementado para permitir o fluxo de telas no momento -->
 
-        <a href='Pagar2.html'>Tela Seguinte</a>
+        <a class = "open-sans" href='Pagar2.html'>Tela Seguinte</a>
 
     </main>
 
