--- a/Pagar5.html
+++ b/Pagar5.html
@@ -27,7 +27,7 @@
             
             <section class = "header-comprovante">
             
-                <h2 class = "destaque"> <!-- Transação processada pela --> All Pay </h2>
+                <h2 class = "destaque"> AllPay </h2> <!-- Sem fonte, dado que é nosso logo-->
 
                 <h3 class = "reais open-sans"> R$20,00 </h3>
 
