--- a/Receber1.html
+++ b/Receber1.html
@@ -32,7 +32,7 @@
 
             <!-- Espaço para inserir texto de modo a simular a experiência do usuário -->
 
-            <input class="input open-sans" type="number" id="txtBusca" placeholder="Em R$...">
+            <input class="input open-sans" type="number" id="txtBusca" placeholder="Em R$..."> <!-- Tentamos mudar a cor da fonte neste item, porém o input não respondeu à mudança-->
 
         </section>
 
