--- a/Receber2.html
+++ b/Receber2.html
@@ -34,7 +34,7 @@
 
             <h3 class = "open-sans"> Conta a Receber: </h3>
 
-            <p class = "subtextoopen-sans"> 598.***.***-47</p>
+            <p class = "subtexto open-sans"> 598.***.***-47</p>
 
         </section>
         
@@ -44,7 +44,7 @@
         
         <!-- Este botão não existirá em nosso aplicativo, apenas foi incrementado para permitir o fluxo de telas no momento -->
 
-        <a class = "tela-seguinte" href='Receber3.html'>Tela Seguinte</a>
+        <a class = "tela-seguinte open-sans" href='Receber3.html'>Tela Seguinte</a>
 
     </main>
 </body>
