--- a/Receber4.html
+++ b/Receber4.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,7 +31,7 @@
 
         <!-- Mensagem Saldo -->
 
-        <h2 class = "subtexto open-sans"> O valor de R$20.00 foi adicionado ao seu saldo!</h2>
+        <h2 class = "subtexto eb-garamond"> O valor de R$20.00 foi adicionado ao seu saldo!</h2>
 
         <!-- Botão Início  -->
 
