--- a/Historico2.html
+++ b/Historico2.html
@@ -102,13 +102,13 @@
 
                 <!-- Gráfico de Análise Lucro por Dia-->
 
-                <section class = "section-grafico">
+                <div class = "section-grafico">
 
-                <!-- <h4 class = "subtexto"> Gráfico de Evolução das Vendas por Dia </h4> -->
+                    <!-- <h4 class = "subtexto"> Gráfico de Evolução das Vendas por Dia </h4> -->
 
                     <img class = "grafico" src="IMG/Gráfico-VendasDia.JPG" alt="Evolução das Vendas em Função dos Dias">
 
-                </section>
+                </div>
                 
                 <!-- Neste caso apenas foram colocadas algumas datas de exemplo, mas o usuário poderia ver maior número de datas passadas -->
 
