--- a/Pagar2.html
+++ b/Pagar2.html
@@ -28,7 +28,7 @@
 
         <h3 class="forma-pagamento open-sans"> Selecione a forma de pagamento:</h3>
 
-        <section class="section-botoes">
+        <form class="section-botoes">
 
             <!-- Botão PIX  -->
         
@@ -42,7 +42,7 @@
         
             <a class="botao fonte open-sans" href='Pagar3.html'>CARTÃO</a>
 
-        </section>
+        </form>
 
     </main>
 
