--- a/Pagar3.html
+++ b/Pagar3.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="JS/Pagar3.js"></script>
 </head>
 
 <body>
@@ -46,7 +47,7 @@
 
         <!-- Botão Confirmar  -->
 
-        <a class = "botao fonte open-sans" href='Pagar4.html'>Confirmar</a>
+        <a class = "botao fonte open-sans">Confirmar</a>
 
 
     </main>
