--- a/Receber1.html
+++ b/Receber1.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="JS/Receber1.js"></script>
 </head>
 
 <body>
@@ -18,27 +19,44 @@
 
         <a href="Menu.html"><img src="IMG/Menu.png" alt=""></a>
 
-        <h1 class = "logo"> AllPay</h1>
+        <h1 class="logo"> AllPay</h1>
 
     </header>
 
     <main>
 
-        <h2 class = "destaque open-sans"> Receber </h2>
+        <h2 class="destaque open-sans"> Receber </h2>
+        
+        <section class = "valor open-sans">
 
-        <section>
-
-            <h3 class = "subtexto open-sans"> Insira o Valor: </h3>
-
-            <!-- Espaço para inserir texto de modo a simular a experiência do usuário -->
-
-            <input class="input open-sans" type="number" id="txtBusca" placeholder="Em R$..."> <!-- Tentamos mudar a cor da fonte neste item, porém o input não respondeu à mudança-->
+            <h3>Total (R$): <span>0</span> </h3>
 
         </section>
 
-        <!-- Botão Confirmar -->
+        <section class = "produto open-sans">
 
-        <a class = "botao fonte open-sans" href='Receber2.html'>Confirmar</a>
+            <h4>Produto (R$):</h4>
+            <p>0</p>
+
+        </section>
+
+        <section class = "teclas open-sans">
+
+            <div class="key num">1</div>
+            <div class="key num">2</div>
+            <div class="key num">3</div>
+            <div class="key num">4</div>
+            <div class="key num">5</div>
+            <div class="key num">6</div>
+            <div class="key num">7</div>
+            <div class="key num">8</div>
+            <div class="key num">9</div>
+            <div class="key num">0</div>
+            <div class="key num">.</div>
+            <div class="key com">⟲</div>
+            <div class="key mais com">Adicionar Produto</div>
+
+        </section>
 
     </main>
 </body>
