--- a/Receber3.html
+++ b/Receber3.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="JS/Receber3.js"></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
 
         <a href="Menu.html"><img src="IMG/Menu.png" alt=""></a>
         
-        <h1 class = "logo"> AllPay</h1>
+        <h1 class = "logo"> AllPay </h1>
 
     </header>
 
@@ -29,9 +30,9 @@
 
             <ul>
 
-                <li>  <h2 class = "destaque open-sans"> Transferência de </h2> </li>
+                <li> <h2 class = "destaque open-sans"> Transferência de </h2> </li>
 
-                <li> <p class = "subtexto open-sans"> R$20.00 </p> </li>
+                <li> <p class = "subtexto open-sans">R$ 20.00</li>
 
             </ul>
 
