--- a/Receber4.html
+++ b/Receber4.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
+    <script src="JS/Receber4.js"></script>
 </head>
 
 <body>
@@ -35,7 +36,7 @@
 
         <!-- Botão Início  -->
 
-        <a class = "botao fonte open-sans" href='index.html'>Voltar ao início</a>
+        <a class = "botao fonte open-sans" href='index.html'>Voltar ao Início</a>
 
     </main>
 </body>
