--- a/Pagar2.html
+++ b/Pagar2.html
@@ -26,7 +26,7 @@
             
         <h2 class = "pagando open-sans">Pagando...</h2> 
 
-        <h3 class="forma-pagamento open-sans"> Selecione a forma de pagamento:</h3>
+        <h3 class="forma-pagamento eb-garamond"> Selecione a forma de pagamento:</h3>
 
         <form class="section-botoes">
 
