--- a/Receber1.html
+++ b/Receber1.html
@@ -40,7 +40,7 @@
 
         </section>
 
-        <section class = "teclas open-sans">
+        <div class = "teclas open-sans">
 
             <div class="key num">1</div>
             <div class="key num">2</div>
@@ -56,7 +56,7 @@
             <div class="key com">⟲</div>
             <div class="key mais com">Adicionar Produto</div>
 
-        </section>
+        </div>
 
     </main>
 </body>
